[gd_scene load_steps=12 format=3 uid="uid://cu2yt2tmv713q"]

[ext_resource type="Script" path="res://scenes/bosses/boss_3.gd" id="1_5x2gb"]
[ext_resource type="PackedScene" uid="uid://b8mqkmk1k6cmr" path="res://scenes/misc/boss_blocker.tscn" id="4_gb3bg"]
[ext_resource type="Texture2D" uid="uid://dpociqxdp4658" path="res://assets/boss3.png" id="4_y0u36"]
[ext_resource type="PackedScene" uid="uid://df60px4n320j3" path="res://scenes/magnetron/magnetron.tscn" id="5_84wuc"]
[ext_resource type="PackedScene" uid="uid://cxmr21cgijd61" path="res://scenes/jump_bonus/jump_bonus.tscn" id="6_sqqws"]
[ext_resource type="Texture2D" uid="uid://dvycq7veka7c2" path="res://assets/boss3-eye.png" id="7_u3dub"]
[ext_resource type="PackedScene" uid="uid://bv2mryk3m0kc2" path="res://scenes/activator/activator.tscn" id="7_wr3xa"]
[ext_resource type="AudioStream" uid="uid://byasu4i4w077e" path="res://assets/sfx/button_shake.wav" id="8_eu56t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kkhk"]
size = Vector2(8.375, 107)

[sub_resource type="SpriteFrames" id="SpriteFrames_8c574"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_u3dub")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xdmw3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_u3dub")
}],
"loop": false,
"name": &"idle",
"speed": 1.0
}]

[node name="Boss3" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_5x2gb")

[node name="WeakPoint4" parent="." instance=ExtResource("7_wr3xa")]
position = Vector2(-103, 0)
rotation = -1.5708

[node name="WeakPoint3" parent="." instance=ExtResource("7_wr3xa")]
position = Vector2(251, -109)
rotation = 4.71239

[node name="WeakPoint1" parent="." instance=ExtResource("7_wr3xa")]
position = Vector2(-234, -69)

[node name="WeakPoint2" parent="." instance=ExtResource("7_wr3xa")]
position = Vector2(-227, 69)
rotation = 3.14159

[node name="WeakPoint6" parent="." instance=ExtResource("7_wr3xa")]
position = Vector2(27, 0)
rotation = 4.71239

[node name="WeakPoint5" parent="." instance=ExtResource("7_wr3xa")]
position = Vector2(165, 123)
rotation = 1.5708

[node name="BaseSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_y0u36")

[node name="Boss3AreaEnter" type="Area2D" parent="."]
position = Vector2(-76, 10)
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boss3AreaEnter"]
position = Vector2(-157, -9.5)
shape = SubResource("RectangleShape2D_2kkhk")

[node name="Boss3BlockerEnter" parent="." instance=ExtResource("4_gb3bg")]
visible = false
position = Vector2(-288, -32)

[node name="Magnetron" parent="." instance=ExtResource("5_84wuc")]
position = Vector2(-177, 1)

[node name="Magnetron3" parent="." instance=ExtResource("5_84wuc")]
position = Vector2(95, -1)

[node name="Magnetron5" parent="." instance=ExtResource("5_84wuc")]
position = Vector2(-228, -119)

[node name="Magnetron4" parent="." instance=ExtResource("5_84wuc")]
position = Vector2(-225, 125)

[node name="Boss3BlockerExit1" parent="." instance=ExtResource("4_gb3bg")]
position = Vector2(-96, -32)

[node name="Boss3BlockerFullOpen" parent="." instance=ExtResource("4_gb3bg")]
position = Vector2(-96, -64)
rotation = 1.5708

[node name="Boss3BlockerFullOpen2" parent="." instance=ExtResource("4_gb3bg")]
position = Vector2(-96, 48)
rotation = 1.5708

[node name="Boss3BlockerExit2" parent="." instance=ExtResource("4_gb3bg")]
position = Vector2(-80, -32)

[node name="Boss3BlockerExit3" parent="." instance=ExtResource("4_gb3bg")]
position = Vector2(-64, -32)

[node name="Boss3BlockerExit4" parent="." instance=ExtResource("4_gb3bg")]
position = Vector2(-48, -32)

[node name="Boss3BlockerExit5" parent="." instance=ExtResource("4_gb3bg")]
position = Vector2(-32, -32)

[node name="BossRightEye" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(284, 0)
sprite_frames = SubResource("SpriteFrames_8c574")
animation = &"idle"

[node name="BossLeftEye" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-303, 0)
sprite_frames = SubResource("SpriteFrames_xdmw3")
animation = &"idle"

[node name="LeftEyeMarkerTop" type="Marker2D" parent="."]
position = Vector2(-303, 168)

[node name="RightEyeMarkerTop" type="Marker2D" parent="."]
position = Vector2(278, -164)

[node name="RightEyeMarkerBottom" type="Marker2D" parent="."]
position = Vector2(278, 168)

[node name="LeftEyeMarkerBottom" type="Marker2D" parent="."]
position = Vector2(-303, -164)

[node name="ButtonShakeSFX2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-96, 0)
stream = ExtResource("8_eu56t")

[node name="Pickups" type="Node2D" parent="."]

[node name="JumpBonus19" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(179, -26)

[node name="JumpBonus2" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(-126, 102)

[node name="JumpBonus22" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(-24, 143)

[node name="JumpBonus10" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(-128, -138)

[node name="JumpBonus11" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(-23, -144)

[node name="JumpBonus9" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(177, -110)

[node name="JumpBonus12" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(230, 122)

[node name="JumpBonus24" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(90, -119)

[node name="JumpBonus13" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(-21, -91)

[node name="JumpBonus16" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(-23, 86)

[node name="JumpBonus23" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(101, 125)

[node name="JumpBonus17" parent="Pickups" instance=ExtResource("6_sqqws")]
position = Vector2(227, 34)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-287, -176, -287, -175, -288, -175, -288, -161, -287, -161, -287, -160, -286, -160, -286, -64, -287, -64, -287, -63, -288, -63, -288, -49, -287, -49, -287, -47, -288, -47, -288, -45, -289, -45, -289, -44, -288, -44, -288, -36, -289, -36, -289, -35, -288, -35, -288, -33, -287, -33, -287, -32, -273, -32, -273, -33, -272, -33, -272, -47, -273, -47, -273, -49, -272, -49, -272, -50, -176, -50, -176, -49, -175, -49, -175, -48, -161, -48, -161, -49, -160, -49, -160, -63, -161, -63, -161, -64, -162, -64, -162, -96, -161, -96, -161, -97, -160, -97, -160, -111, -161, -111, -161, -112, -175, -112, -175, -111, -176, -111, -176, -97, -175, -97, -175, -96, -174, -96, -174, -64, -175, -64, -175, -63, -176, -63, -176, -62, -272, -62, -272, -63, -273, -63, -273, -64, -274, -64, -274, -160, -273, -160, -273, -161, -272, -161, -272, -162, 144, -162, 144, -161, 145, -161, 145, -160, 146, -160, 146, -80, 145, -80, 145, -79, 144, -79, 144, -65, 145, -65, 145, -64, 159, -64, 159, -65, 160, -65, 160, -79, 159, -79, 159, -80, 158, -80, 158, -160, 159, -160, 159, -161, 160, -161, 160, -162, 256, -162, 256, -161, 257, -161, 257, -160, 258, -160, 258, 160, 257, 160, 257, 161, 256, 161, 256, 162, 160, 162, 160, 161, 159, 161, 159, 160, 158, 160, 158, 80, 159, 80, 159, 79, 160, 79, 160, 65, 159, 65, 159, 64, 145, 64, 145, 65, 144, 65, 144, 79, 145, 79, 145, 80, 146, 80, 146, 160, 145, 160, 145, 161, 144, 161, 144, 162, -272, 162, -272, 161, -273, 161, -273, 160, -274, 160, -274, 64, -273, 64, -273, 63, -272, 63, -272, 62, -176, 62, -176, 63, -175, 63, -175, 64, -174, 64, -174, 96, -175, 96, -175, 97, -176, 97, -176, 111, -175, 111, -175, 112, -161, 112, -161, 111, -160, 111, -160, 97, -161, 97, -161, 96, -162, 96, -162, 64, -161, 64, -161, 63, -160, 63, -160, 49, -161, 49, -161, 48, -175, 48, -175, 49, -176, 49, -176, 50, -272, 50, -272, 49, -273, 49, -273, 47, -272, 47, -272, 33, -273, 33, -273, 32, -287, 32, -287, 33, -288, 33, -288, 35, -289, 35, -289, 36, -288, 36, -288, 44, -289, 44, -289, 45, -288, 45, -288, 47, -287, 47, -287, 49, -288, 49, -288, 63, -287, 63, -287, 64, -286, 64, -286, 160, -287, 160, -287, 161, -288, 161, -288, 175, -287, 175, -287, 176, -273, 176, -273, 175, -272, 175, -272, 174, 144, 174, 144, 175, 145, 175, 145, 176, 159, 176, 159, 175, 160, 175, 160, 174, 256, 174, 256, 175, 257, 175, 257, 176, 271, 176, 271, 175, 272, 175, 272, 161, 271, 161, 271, 160, 270, 160, 270, -160, 271, -160, 271, -161, 272, -161, 272, -175, 271, -175, 271, -176, 257, -176, 257, -175, 256, -175, 256, -174, 160, -174, 160, -175, 159, -175, 159, -176, 145, -176, 145, -175, 144, -175, 144, -174, -272, -174, -272, -175, -273, -175, -273, -176)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-95, -64, -95, -63, -96, -63, -96, -49, -95, -49, -95, -47, -96, -47, -96, -33, -95, -33, -95, -32, -81, -32, -81, -33, -79, -33, -79, -32, -65, -32, -65, -33, -63, -33, -63, -32, -49, -32, -49, -33, -47, -33, -47, -32, -33, -32, -33, -33, -31, -33, -31, -32, -17, -32, -17, -33, -16, -33, -16, -47, -17, -47, -17, -48, -31, -48, -31, -47, -33, -47, -33, -48, -47, -48, -47, -47, -49, -47, -49, -48, -63, -48, -63, -47, -65, -47, -65, -48, -79, -48, -79, -47, -81, -47, -81, -49, -80, -49, -80, -50, 32, -50, 32, -49, 33, -49, 33, -48, 34, -48, 34, 48, 33, 48, 33, 49, 32, 49, 32, 50, -80, 50, -80, 49, -81, 49, -81, 47, -79, 47, -79, 48, -65, 48, -65, 47, -63, 47, -63, 48, -49, 48, -49, 47, -47, 47, -47, 48, -33, 48, -33, 47, -31, 47, -31, 48, -17, 48, -17, 47, -16, 47, -16, 33, -17, 33, -17, 32, -31, 32, -31, 33, -33, 33, -33, 32, -47, 32, -47, 33, -49, 33, -49, 32, -63, 32, -63, 33, -65, 33, -65, 32, -79, 32, -79, 33, -81, 33, -81, 32, -95, 32, -95, 33, -96, 33, -96, 47, -95, 47, -95, 49, -96, 49, -96, 63, -95, 63, -95, 64, -81, 64, -81, 63, -80, 63, -80, 62, 32, 62, 32, 63, 33, 63, 33, 64, 47, 64, 47, 63, 48, 63, 48, 49, 47, 49, 47, 48, 46, 48, 46, -48, 47, -48, 47, -49, 48, -49, 48, -63, 47, -63, 47, -64, 33, -64, 33, -63, 32, -63, 32, -62, -80, -62, -80, -63, -81, -63, -81, -64)
